complete links pages in users dashboard

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -9,6 +9,11 @@
     "Domain": "dev-pnxnfhh8.us.auth0.com",
     "Audience": "https://services.formee.io"
   },
+  "Identity": {
+    "Audience": "https://services.formee.io",
+    "Issuer": "dev-pnxnfhh8.us.auth0.com",
+    "SecretKey": "s6v9y$B&E)H@MbQe"
+  },
   "AllowedHosts": "*",
   "Routes": [
     // Containers Service
@@ -190,7 +195,7 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/links/{id}",
+      "UpstreamPathTemplate": "/gateway/links/{id}",
       "UpstreamHttpMethod": [ "GET", "DELETE" ],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
@@ -205,7 +210,7 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/links/all/{containerId}",
+      "UpstreamPathTemplate": "/gateway/links/all/{containerId}",
       "UpstreamHttpMethod": [ "GET", "DELETE" ],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
@@ -220,7 +225,22 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/links/hits/all/{containerId}/{startDate:DateTime}/{endDate:DateTime}",
+      "UpstreamPathTemplate": "/gateway/links/hits/all/{containerId}/{startDate:DateTime}/{endDate:DateTime}",
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer"
+      }
+    },
+    {
+      "DownstreamPathTemplate": "/api/links/hits/all/{linkId:int}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "links.service",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/gateway/links/hits/all/{linkId:int}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
@@ -235,14 +255,14 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/links",
+      "UpstreamPathTemplate": "/gateway/links",
       "UpstreamHttpMethod": [ "POST" ],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
     },
     {
-      "DownstreamPathTemplate": "/api/links/redirect/{targetUrl}",
+      "DownstreamPathTemplate": "/api/links/redirects/{targetUrl}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
@@ -250,11 +270,8 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/links/redirect/{targetUrl}",
-      "UpstreamHttpMethod": [ "GET" ],
-      "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer"
-      }
+      "UpstreamPathTemplate": "/redirect/{targetUrl}",
+      "UpstreamHttpMethod": [ "GET" ]
     },
     {
       "DownstreamPathTemplate": "/api/links/redirects/all/{linkId}",
@@ -265,7 +282,7 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/links/redirects/all/{linkId}",
+      "UpstreamPathTemplate": "/gateway/links/redirects/all/{linkId}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
