--- a/src/Formee/Services/Analytics/Analytics.API/appsettings.json
+++ b/src/Formee/Services/Analytics/Analytics.API/appsettings.json
@@ -20,5 +20,10 @@
   "Auth0": {
     "Domain": "dev-pnxnfhh8.us.auth0.com",
     "Audience": "https://services.formee.io"
+  },
+  "Identity": {
+    "Audience": "https://services.formee.io",
+    "Issuer": "dev-pnxnfhh8.us.auth0.com",
+    "SecretKey": "s6v9y$B&E)H@MbQe"
   }
 }
