--- a/src/Formee/Services/Identity/Identity.API/appsettings.json
+++ b/src/Formee/Services/Identity/Identity.API/appsettings.json
@@ -13,7 +13,8 @@
   },
   "Identity": {
     "Audience": "https://services.formee.io",
-    "Issuer": "https://auth.formee.io"
+    "Issuer": "dev-pnxnfhh8.us.auth0.com",
+    "SecretKey": "s6v9y$B&E)H@MbQe"
   },
   "M2M": {
     "Grant_Type": "client_credentials",
