--- a/src/Formee/Services/Links/Links.API/appsettings.json
+++ b/src/Formee/Services/Links/Links.API/appsettings.json
@@ -10,10 +10,15 @@
     "DefaultConnection": ""
   },
   "Services": {
-    "Subscriptions": "http://localhost:5214/"
+    "Subscriptions": "http://host.docker.internal:5007"
   },
   "Auth0": {
     "Domain": "dev-pnxnfhh8.us.auth0.com",
     "Audience": "https://services.formee.io"
+  },
+  "Identity": {
+    "Audience": "https://services.formee.io",
+    "Issuer": "dev-pnxnfhh8.us.auth0.com",
+    "SecretKey": "s6v9y$B&E)H@MbQe"
   }
 }
