--- a/src/Formee/Services/Containers/API/appsettings.json
+++ b/src/Formee/Services/Containers/API/appsettings.json
@@ -28,6 +28,11 @@
     "Domain": "dev-pnxnfhh8.us.auth0.com",
     "Audience": "https://services.formee.io"
   },
+  "Identity": {
+    "Audience": "https://services.formee.io",
+    "Issuer": "dev-pnxnfhh8.us.auth0.com",
+    "SecretKey": "s6v9y$B&E)H@MbQe"
+  },
   "Services": {
     "Subscriptions": "http://host.docker.internal:5007"
   }
