--- a/src/Formee/Services/Notifications/Presentation/appsettings.json
+++ b/src/Formee/Services/Notifications/Presentation/appsettings.json
@@ -13,6 +13,11 @@
     "Domain": "dev-pnxnfhh8.us.auth0.com",
     "Audience": "https://services.formee.io"
   },
+  "Identity": {
+    "Audience": "https://services.formee.io",
+    "Issuer": "dev-pnxnfhh8.us.auth0.com",
+    "SecretKey": "s6v9y$B&E)H@MbQe"
+  },
   "ServiceBus": {
     "ConnectionString": "",
     "History": "",
