--- a/src/Formee/Services/Analytics/Analytics.API/appsettings.json
+++ b/src/Formee/Services/Analytics/Analytics.API/appsettings.json
@@ -7,12 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=7MO0DO\\MSSQLSERVER01;Database=Formee.Analytics;User Id=Admin;Password=Admin@123123;integrated security=false;TrustServerCertificate=True"
   },
   "ServiceBus": {
-    "ConnectionString": "",
-    "HistoryTopic": "",
-    "NotificationsTopic": ""
+    "ConnectionString": "Endpoint=sb://formee.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=+prGrnIC0RwHSKHF3zJ/5HW35R08KH4wG+ASbPIkqlk=",
+    "HistoryTopic": "topic-history",
+    "NotificationsTopic": "topic-notifications",
+    "NotificationsSubscription": "notifications",
+    "HistorySubscription": "history"
   },
   "Services": {
     "Subscriptions": "http://localhost:5214/"
@@ -25,5 +27,8 @@
     "Audience": "https://services.formee.io",
     "Issuer": "dev-pnxnfhh8.us.auth0.com",
     "SecretKey": "s6v9y$B&E)H@MbQe"
-  }
+  },
+  "Settings": {
+    "EnableMigrations": false 
+  } 
 }
