--- a/src/Formee/Services/Notifications/Presentation/appsettings.json
+++ b/src/Formee/Services/Notifications/Presentation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=7MO0DO\\MSSQLSERVER01;Database=Formee.Notifications;User Id=Admin;Password=Admin@123123;integrated security=false;TrustServerCertificate=True"
   },
   "Auth0": {
     "Domain": "dev-pnxnfhh8.us.auth0.com",
@@ -19,9 +19,10 @@
     "SecretKey": "s6v9y$B&E)H@MbQe"
   },
   "ServiceBus": {
-    "ConnectionString": "",
-    "History": "",
-    "Notifications": "",
-    "NotificationsSubscription": ""
+    "ConnectionString": "Endpoint=sb://formee.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=+prGrnIC0RwHSKHF3zJ/5HW35R08KH4wG+ASbPIkqlk=",
+    "HistoryTopic": "topic-history",
+    "NotificationsTopic": "topic-notifications",
+    "NotificationsSubscription": "notifications",
+    "HistorySubscription": "history"
   }
 }
