analytics service is feature completed

--- a/src/Formee/Services/Analytics/Analytics.API/Analytics.API.csproj
+++ b/src/Formee/Services/Analytics/Analytics.API/Analytics.API.csproj
@@ -5,6 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<DockerfileContext>..\..\..</DockerfileContext>
+		<UserSecretsId>b96bbd99-d256-47f4-91f5-fc6f970cce93</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
