--- a/src/Formee/Services/Analytics/Analytics.API/appsettings.json
+++ b/src/Formee/Services/Analytics/Analytics.API/appsettings.json
@@ -7,28 +7,29 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=7MO0DO\\MSSQLSERVER01;Database=Formee.Analytics;User Id=Admin;Password=Admin@123123;integrated security=false;TrustServerCertificate=True"
+    "DefaultConnection": ""
   },
   "ServiceBus": {
-    "ConnectionString": "Endpoint=sb://formee.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=+prGrnIC0RwHSKHF3zJ/5HW35R08KH4wG+ASbPIkqlk=",
-    "HistoryTopic": "topic-history",
-    "NotificationsTopic": "topic-notifications",
-    "NotificationsSubscription": "notifications",
-    "HistorySubscription": "history"
+    "ConnectionString": "",
+    "HistoryTopic": "",
+    "NotificationsTopic": "",
+    "NotificationsSubscription": "",
+    "HistorySubscription": ""
   },
   "Services": {
-    "Subscriptions": "http://localhost:5214/"
+    "Subscriptions": ""
   },
   "Auth0": {
-    "Domain": "dev-pnxnfhh8.us.auth0.com",
-    "Audience": "https://services.formee.io"
+    "Domain": "",
+    "Audience": ""
   },
   "Identity": {
-    "Audience": "https://services.formee.io",
-    "Issuer": "dev-pnxnfhh8.us.auth0.com",
-    "SecretKey": "s6v9y$B&E)H@MbQe"
+    "Audience": "",
+    "Issuer": "",
+    "SecretKey": ""
   },
   "Settings": {
-    "EnableMigrations": false 
+    "EnableHttpsRedirection": false,
+    "EnableMigrations": false
   } 
 }
