--- a/src/Formee/Services/Containers/API/appsettings.json
+++ b/src/Formee/Services/Containers/API/appsettings.json
@@ -15,25 +15,26 @@
     "ServiceBus": ""
   },
   "ServiceBus": {
-    "ConnectionString": "Endpoint=sb://formee.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=+prGrnIC0RwHSKHF3zJ/5HW35R08KH4wG+ASbPIkqlk=",
-    "HistoryTopic": "topic-history",
-    "NotificationsTopic": "topic-notifications",
-    "NotificationsSubscription": "notifications",
-    "HistorySubscription": "history"
+    "ConnectionString": "",
+    "HistoryTopic": "",
+    "NotificationsTopic": "",
+    "NotificationsSubscription": "",
+    "HistorySubscription": ""
   },
   "Settings": {
-    "EnableHttpsRedirection": false
+    "EnableHttpsRedirection": false,
+    "EnableMigrations": false
   },
   "Auth0": {
-    "Domain": "dev-pnxnfhh8.us.auth0.com",
-    "Audience": "https://services.formee.io"
+    "Domain": "",
+    "Audience": ""
   },
   "Identity": {
-    "Audience": "https://services.formee.io",
-    "Issuer": "dev-pnxnfhh8.us.auth0.com",
-    "SecretKey": "s6v9y$B&E)H@MbQe"
+    "Audience": "",
+    "Issuer": "",
+    "SecretKey": ""
   },
   "Services": {
-    "Subscriptions": "http://host.docker.internal:5007"
+    "Subscriptions": ""
   }
 }
