--- a/src/Formee/Services/History/.env
+++ b/src/Formee/Services/History/.env
@@ -1,2 +1,2 @@
-AZURE_SERVICE_BUS="Endpoint=sb://formee.servicebus.windows.net/;SharedAccessKeyName=SharedAccessPolicy;SharedAccessKey=2zjgyBu0KGgdOiVx8rHy5GPnHBNvKoR9d+ASbDEu2fw=;EntityPath=topic-history"
+AZURE_SERVICE_BUS=""
 MONGO_DB_HISTORY="mongodb://127.0.0.1:27017/history"
