--- a/src/Formee/Services/Notifications/Presentation/appsettings.json
+++ b/src/Formee/Services/Notifications/Presentation/appsettings.json
@@ -19,10 +19,10 @@
     "SecretKey": "s6v9y$B&E)H@MbQe"
   },
   "ServiceBus": {
-    "ConnectionString": "Endpoint=sb://formee.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=+prGrnIC0RwHSKHF3zJ/5HW35R08KH4wG+ASbPIkqlk=",
-    "HistoryTopic": "topic-history",
-    "NotificationsTopic": "topic-notifications",
-    "NotificationsSubscription": "notifications",
-    "HistorySubscription": "history"
+    "ConnectionString": "",
+    "HistoryTopic": "",
+    "HistorySubscription": "",
+    "NotificationsTopic": "",
+    "NotificationsSubscription": ""
   }
 }
