forms service is feature completed

--- a/src/Formee/Services/Forms/Infrastructure/Infrastructure.csproj
+++ b/src/Formee/Services/Forms/Infrastructure/Infrastructure.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<ProjectReference Include="..\..\..\Shared\ServiceBus\ServiceBus.csproj" />
+	<ProjectReference Include="..\..\..\Shared\SynchronousCommunication\SynchronousCommunication.csproj" />
 	<ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
