--- a/src/Formee/Services/Forms/Presentation/appsettings.json
+++ b/src/Formee/Services/Forms/Presentation/appsettings.json
@@ -9,13 +9,27 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "ServiceBus": {
+    "ConnectionString": "",
+    "HistoryTopic": "",
+    "HistorySubscription": "",
+    "NotificationsTopic": "",
+    "NotificationsSubscription": ""
+  },
+  "Settings": {
+    "EnableHttpsRedirection": false,
+    "EnableMigrations": false
+  },
   "Auth0": {
-    "Domain": "dev-pnxnfhh8.us.auth0.com",
-    "Audience": "https://services.formee.io"
+    "Domain": "",
+    "Audience": ""
   },
   "Identity": {
-    "Audience": "https://services.formee.io",
-    "Issuer": "dev-pnxnfhh8.us.auth0.com",
-    "SecretKey": "s6v9y$B&E)H@MbQe"
+    "Audience": "",
+    "Issuer": "",
+    "SecretKey": ""
+  },
+  "Services": {
+    "Subscriptions": ""
   }
 }
