--- a/src/Formee/Services/Links/Links.API/Links.API.csproj
+++ b/src/Formee/Services/Links/Links.API/Links.API.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\ServiceBus\ServiceBus.csproj" />
     <ProjectReference Include="..\..\..\Shared\SynchronousCommunication\SynchronousCommunication.csproj" />
     <ProjectReference Include="..\Links.DataAccess\Links.BusinessLogic.csproj" />
   </ItemGroup>
