--- a/src/Formee/Services/Links/Links.API/appsettings.json
+++ b/src/Formee/Services/Links/Links.API/appsettings.json
@@ -10,15 +10,15 @@
     "DefaultConnection": ""
   },
   "Services": {
-    "Subscriptions": "http://host.docker.internal:5007"
+    "Subscriptions": ""
   },
   "Auth0": {
-    "Domain": "dev-pnxnfhh8.us.auth0.com",
-    "Audience": "https://services.formee.io"
+    "Domain": "",
+    "Audience": ""
   },
   "Identity": {
-    "Audience": "https://services.formee.io",
-    "Issuer": "dev-pnxnfhh8.us.auth0.com",
-    "SecretKey": "s6v9y$B&E)H@MbQe"
+    "Audience": "",
+    "Issuer": "",
+    "SecretKey": ""
   }
 }
