--- a/src/Formee/Services/Identity/Identity.API/appsettings.json
+++ b/src/Formee/Services/Identity/Identity.API/appsettings.json
@@ -7,19 +7,14 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "dev-pnxnfhh8.us.auth0.com",
-    "Audience": "https://services.formee.io",
-    "APIUrl": "https://login.auth0.com"
+    "Domain": "",
+    "Audience": "",
+    "APIUrl": ""
   },
   "Identity": {
-    "Audience": "https://services.formee.io",
-    "Issuer": "dev-pnxnfhh8.us.auth0.com",
-    "SecretKey": "s6v9y$B&E)H@MbQe"
-  },
-  "M2M": {
-    "Grant_Type": "client_credentials",
-    "Client_Id": "KOUvgj21YBsZjCaok4Uq89DUfuCnquhA",
-    "Client_Secret": "H0SUH-wombhBgL4dxgP4q4dHPtUhmENTbmkOaq-oHNs7AU0yOGuF2ETfUf4vgbgd"
+    "Audience": "",
+    "Issuer": "",
+    "SecretKey": ""
   },
   "AzureStorage": {
     "ConnectionString": "",
@@ -29,6 +24,6 @@
     "DefaultConnection": ""
   },
   "Services": {
-    "Subscriptions": "http://host.docker.internal:5007"
+    "Subscriptions": ""
   }
 }
