add remaining features

--- a/src/Formee/FrontEnd/Users/Client.Web/Client.Web.csproj
+++ b/src/Formee/FrontEnd/Users/Client.Web/Client.Web.csproj
@@ -3,8 +3,9 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<BlazorEnableCompression>false</BlazorEnableCompression>
-		<PublishTrimmed>false</PublishTrimmed>
+		<BlazorEnableCompression>true</BlazorEnableCompression>
+		<PublishTrimmed>true</PublishTrimmed>
+		<TrimMode>full</TrimMode>
 	</PropertyGroup>
 
 	<ItemGroup>
