--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -16,7 +16,6 @@
   },
   "AllowedHosts": "*",
   "Routes": [
-    // Containers Service
     {
       "DownstreamPathTemplate": "/api/containers/{id}",
       "DownstreamScheme": "http",
@@ -27,7 +26,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/containers/{id}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "UpstreamHttpMethod": ["GET", "DELETE"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -42,7 +41,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/containers/all/{userId:Guid}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -57,12 +56,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/containers",
-      "UpstreamHttpMethod": [ "POST", "PUT" ],
+      "UpstreamHttpMethod": ["POST", "PUT"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
     },
-    // Analytics Service
     {
       "DownstreamPathTemplate": "/api/sites/all/{containerId}",
       "DownstreamScheme": "http",
@@ -73,7 +71,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/sites/all/{containerId}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -88,7 +86,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/sites/{id}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -103,7 +101,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/hits/all/{siteId}/{startDate:DateTime}/{endDate:DateTime}?filter={filter}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -118,7 +116,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/hits",
-      "UpstreamHttpMethod": [ "POST" ],
+      "UpstreamHttpMethod": ["POST"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -133,12 +131,41 @@
         }
       ],
       "UpstreamPathTemplate": "/api/category/top/{siteId}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
     },
-    // Forms Service
+    {
+      "DownstreamPathTemplate": "/api/forms",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "forms.service",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/gateway/forms",
+      "UpstreamHttpMethod": ["POST", "PUT"],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer"
+      }
+    },
+    {
+      "DownstreamPathTemplate": "/api/forms/{id}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "forms.service",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/gateway/forms/{id}",
+      "UpstreamHttpMethod": ["GET", "DELETE"],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer"
+      }
+    },
     {
       "DownstreamPathTemplate": "/api/forms/all/{siteId}",
       "DownstreamScheme": "http",
@@ -148,8 +175,8 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/forms/all/{siteId}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamPathTemplate": "/gateway/forms/all/{siteId}",
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -163,13 +190,12 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/formresponse/all/{formId}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamPathTemplate": "/gateway/formresponse/all/{formId}",
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
     },
-    // History Service
     {
       "DownstreamPathTemplate": "/api/history/all/{everything}",
       "DownstreamScheme": "http",
@@ -180,12 +206,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/history/all/{everything}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
     },
-    // Links Service
     {
       "DownstreamPathTemplate": "/api/links/{id}",
       "DownstreamScheme": "http",
@@ -196,7 +221,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/links/{id}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "UpstreamHttpMethod": ["GET", "DELETE"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -211,7 +236,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/links/all/{containerId}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "UpstreamHttpMethod": ["GET", "DELETE"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -226,7 +251,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/links/hits/all/{containerId}/{startDate:DateTime}/{endDate:DateTime}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -241,7 +266,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/links/hits/all/{linkId:int}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -256,7 +281,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/links",
-      "UpstreamHttpMethod": [ "POST" ],
+      "UpstreamHttpMethod": ["POST"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -271,7 +296,7 @@
         }
       ],
       "UpstreamPathTemplate": "/redirect/{targetUrl}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": ["GET"]
     },
     {
       "DownstreamPathTemplate": "/api/links/redirects/all/{linkId}",
@@ -283,12 +308,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/links/redirects/all/{linkId}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
     },
-    // Notifications Service
     {
       "DownstreamPathTemplate": "/api/notifications/all/{globalUserId}/{numberOfRecords}",
       "DownstreamScheme": "http",
@@ -299,7 +323,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/notifications/all/{globalUserId}/{numberOfRecords}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer",
         "RouteClaimsRequirement": {
@@ -317,7 +341,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/notifications/reads/{notificationId:int}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer",
         "RouteClaimsRequirement": {
@@ -335,9 +359,8 @@
         }
       ],
       "UpstreamPathTemplate": "/hubs/{catchAll}",
-      "UpstreamHttpMethod": [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ]
+      "UpstreamHttpMethod": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     },
-    // Identity API
     {
       "DownstreamPathTemplate": "/api/identity/admins/{roleId}",
       "DownstreamScheme": "http",
@@ -348,7 +371,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/identity/admins/{roleId}",
-      "UpstreamHttpMethod": [ "POST" ],
+      "UpstreamHttpMethod": ["POST"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -363,20 +386,8 @@
         }
       ],
       "UpstreamPathTemplate": "/api/identity/users",
-      "UpstreamHttpMethod": [ "POST", "PUT" ]
+      "UpstreamHttpMethod": ["POST", "PUT"]
     },
-    //{
-    //  "DownstreamPathTemplate": "/api/identity/users/{everything}",
-    //  "DownstreamScheme": "http",
-    //  "DownstreamHostAndPorts": [
-    //    {
-    //      "Host": "identity.service",
-    //      "Port": 80
-    //    }
-    //  ],
-    //  "UpstreamPathTemplate": "/api/identity/users/{everything}",
-    //  "UpstreamHttpMethod": [ "POST" ]
-    //},
     {
       "DownstreamPathTemplate": "/api/identity/users/all?filter={filter}",
       "DownstreamScheme": "http",
@@ -387,7 +398,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/identity/users/all?filter={filter}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -402,7 +413,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/identity/users/{userId:Guid}",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -417,7 +428,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/identity/users/avatar/{userId}",
-      "UpstreamHttpMethod": [ "POST" ]
+      "UpstreamHttpMethod": ["POST"]
     },
     {
       "DownstreamPathTemplate": "/api/identity/users/token/{userId}",
@@ -429,9 +440,8 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/identity/users/{userId}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": ["GET"]
     },
-    // Subscriptions Service
     {
       "DownstreamPathTemplate": "/api/subscriptions/all",
       "DownstreamScheme": "http",
@@ -442,7 +452,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/all",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -457,7 +467,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/{id:int}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "UpstreamHttpMethod": ["GET", "DELETE"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -472,7 +482,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions",
-      "UpstreamHttpMethod": [ "POST", "PUT" ],
+      "UpstreamHttpMethod": ["POST", "PUT"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -487,7 +497,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/features/{id:int}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "UpstreamHttpMethod": ["GET", "DELETE"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -502,7 +512,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/features/all",
-      "UpstreamHttpMethod": [ "GET" ],
+      "UpstreamHttpMethod": ["GET"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -517,11 +527,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/features",
-      "UpstreamHttpMethod": [ "POST", "PUT" ],
+      "UpstreamHttpMethod": ["POST", "PUT"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
-    }, // coupons endpoints
+    },
     {
       "DownstreamPathTemplate": "/api/coupons/{id:int}",
       "DownstreamScheme": "http",
@@ -532,7 +542,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/coupons/{id:int}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "UpstreamHttpMethod": ["GET", "DELETE"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
@@ -547,7 +557,7 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/coupons",
-      "UpstreamHttpMethod": [ "POST", "PUT" ],
+      "UpstreamHttpMethod": ["POST", "PUT"],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
